--- a/ADIN.WPF/View/ClockPinControlView.xaml
+++ b/ADIN.WPF/View/ClockPinControlView.xaml
@@ -18,14 +18,14 @@
             <GroupBox Header='GP_CLK Pin Control' >
                 <StackPanel>
                     <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" Margin='10' >Control the clock output on the GPCLK pin.</TextBlock>
-                    <WrapPanel HorizontalAlignment='Left' Margin='10'  Orientation='Horizontal' ItemHeight='50' ItemWidth='180'>
+                    <WrapPanel HorizontalAlignment='Left' Orientation='Horizontal'>
 
-                        <telerik:RadRadioButton Style="{StaticResource RadioButtonStyle}" Content="None" Command="{Binding ClkPnCtrlCmd_None}" CommandParameter="None" IsChecked="True"/>
-                        <telerik:RadRadioButton Style="{StaticResource RadioButtonStyle}" Content="125 MHz PHY Recovered" Command="{Binding ClkPnCtrlCmd_Rcvr125Mhz}" CommandParameter="125 MHz PHY Recovered"/>
-                        <telerik:RadRadioButton Style="{StaticResource RadioButtonStyle}" Content="125 MHz PHY Free Running" Command="{Binding ClkPnCtrlCmd_Free125Mhz}" CommandParameter="125 MHz PHY Free Running"/>
-                        <telerik:RadRadioButton Style="{StaticResource RadioButtonStyle}" Content="Recovered HeartBeat" Command="{Binding ClkPnCtrlCmd_HrtRcvr}" CommandParameter="Recovered HeartBeat"/>
-                        <telerik:RadRadioButton Style="{StaticResource RadioButtonStyle}" Content="Free Running HeartBeat" Command="{Binding ClkPnCtrlCmd_HrtFree}" CommandParameter="Free Running HeartBeat"/>
-                        <telerik:RadRadioButton Style="{StaticResource RadioButtonStyle}" Content="25 MHz Reference" Command="{Binding ClkPnCtrlCmd_25Mhz}" CommandParameter="25 MHz Reference"/>
+                        <telerik:RadRadioButton Style="{StaticResource ClockPinRadioButtonStyle}" Content="None" Command="{Binding ClkPnCtrlCmd_None}" CommandParameter="None" IsChecked="True"/>
+                        <telerik:RadRadioButton Style="{StaticResource ClockPinRadioButtonStyle}" Content="125 MHz PHY Recovered" Command="{Binding ClkPnCtrlCmd_Rcvr125Mhz}" CommandParameter="125 MHz PHY Recovered"/>
+                        <telerik:RadRadioButton Style="{StaticResource ClockPinRadioButtonStyle}" Content="125 MHz PHY Free Running" Command="{Binding ClkPnCtrlCmd_Free125Mhz}" CommandParameter="125 MHz PHY Free Running"/>
+                        <telerik:RadRadioButton Style="{StaticResource ClockPinRadioButtonStyle}" Content="Recovered HeartBeat" Command="{Binding ClkPnCtrlCmd_HrtRcvr}" CommandParameter="Recovered HeartBeat"/>
+                        <telerik:RadRadioButton Style="{StaticResource ClockPinRadioButtonStyle}" Content="Free Running HeartBeat" Command="{Binding ClkPnCtrlCmd_HrtFree}" CommandParameter="Free Running HeartBeat"/>
+                        <telerik:RadRadioButton Style="{StaticResource ClockPinRadioButtonStyle}" Content="25 MHz Reference" Command="{Binding ClkPnCtrlCmd_25Mhz}" CommandParameter="25 MHz Reference"/>
 
                     </WrapPanel>
                 </StackPanel>
