--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -131,7 +131,7 @@
                 </telerik:PropertyDefinition>
 
                 <!--Energy Detect Powerdown Mode-->
-                <telerik:PropertyDefinition Description="Energy Detect PowerDown Mode" DisplayName="Energy Detect PowerDown Mode" GroupName="Energy Detect PowerDown Mode" OrderIndex="5">
+                <telerik:PropertyDefinition Description="Energy Detect Power-down Mode" DisplayName="Energy Detect Power-down Mode" GroupName="Energy Detect Power-down Mode" OrderIndex="5">
                     <telerik:PropertyDefinition.EditorTemplate>
                         <DataTemplate>
                             <telerik:RadComboBox ItemsSource="{Binding EnergyDetectPowerDownModes}"
