--- a/ADIN.WPF/Themes/TabControlStyle.xaml
+++ b/ADIN.WPF/Themes/TabControlStyle.xaml
@@ -1,5 +1,78 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ADIN.WPF.Themes">
-    
+    <Style x:Key="TabStyle" TargetType="{x:Type TabControl}">
+        <Setter Property="BorderThickness" Value="0 0 0 0"/>
+        <Setter Property="BorderBrush" Value="Gray"/>
+        <Setter Property="Background" Value="White"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TabControl}">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Border Grid.Row="1">
+                            <Border BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+                                <Border Background="{TemplateBinding Background}">
+                                    <ContentPresenter ContentSource="SelectedContent"/>
+                                </Border>
+                            </Border>
+                        </Border>
+                        <TabPanel Grid.Row="0" IsItemsHost="true" Margin="0 0 0 0" HorizontalAlignment="Center"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="TabItemStyle" TargetType="{x:Type TabItem}">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="BorderThickness" Value="0 0 0 3"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Padding" Value="20 20 20 15"/>
+        <Setter Property="Height" Value="56"/>
+        <Setter Property="Background" Value="White"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="FontFamily" Value="Barlow"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TabItem}">
+                    <Border>
+                        <Grid>
+                            <Grid>
+                                <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"  BorderThickness="{TemplateBinding BorderThickness}"/>
+                            </Grid>
+                            <Border Name="Bar" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}">
+                                <ContentPresenter Name="headerName" TextBlock.FontSize="14" TextBlock.FontWeight="Medium" ContentSource="Header" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
+                                </ContentPresenter>
+                            </Border>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter TargetName="Bar" Property="BorderThickness" Value="0 0 0 3"/>
+                            <Setter TargetName="Bar" Property="BorderBrush" Value="{StaticResource hmc.color.interactive.primary.idle}"/>
+                            <Setter TargetName="headerName" Property="TextBlock.FontWeight" Value="Bold"/>
+                            <Setter TargetName="headerName" Property="TextBlock.Foreground" Value="{StaticResource hmc.color.interactive.primary.idle}"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="Bar" Property="BorderThickness" Value="0 0 0 3"/>
+                            <Setter TargetName="Bar" Property="BorderBrush" Value="{StaticResource hmc.color.interactive.primary.hover}"/>
+                            <!--<Setter TargetName="headerName" Property="TextBlock.Foreground" Value="{StaticResource hmc.color.interactive.primary.hover}"/>-->
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <!--<Style.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="BorderThickness" Value="0 0 0 3"/>
+                <Setter Property="BorderBrush" Value="{StaticResource hmc.color.interactive.primary.idle}"/>
+                --><!--<Setter Property="FontWeight" Value="Bold"/>--><!--
+                <Setter Property="Foreground" Value="{StaticResource hmc.color.interactive.primary.idle}"/>
+            </Trigger>
+        </Style.Triggers>-->
+    </Style>
 </ResourceDictionary>
